# chainer-sagemaker-tools

./: Pipfile  README.md  make_setup.sh  pyproject.toml  requirements.txt  setup.py
sagemaker_tools/: exec_train.py  extract_tarfile.py  merge_configs.py
smtools/: README.md  __init__.py  merge_configs.py  types.py
smtools/chainer/extensions/: slack_reporter.py  snapshot_transfer.py
smtools/extensions/: README.md  __init__.py  snapshot_transfer.py
smtools/torch/handlers/: __init__.py  archive.py  remove.py  s3_copy.py
tests/: test_archive.py  test_s3_copy.py
