[tool.poetry]
name = "smtools"
version = "0.1.0"
description = ""
authors = ["hrsma2i <hrs.ma2i@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
joblib = "^0.14.1"
tqdm = "^4.41.1"
numpy = "^1.18.1"
matplotlib = "^3.1.2"
pandas = "^0.25.3"
Pillow = "^7.0.0"
boto3 = "^1.11.0"
sagemaker = "^1.50.1"
slackweb = "^1.0.5"
chainer = "6.0.0"
mypy = "^0.761"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
